More config and apps

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -1,5 +1,9 @@
 encryption = "gpg"
+
 [gpg]
     recipient = "3FA802F22315C0940E44A51F4690C65094D92796"
+
 [data]
     fullname = "Romain Barissat"
+    gpgkey = "3FA802F22315C0940E44A51F4690C65094D92796"
+    gitemail = "romain-noreply@barissat.com"
