--- a/run_once_before_1-install-packages-darwin.sh.tmpl
+++ b/run_once_before_1-install-packages-darwin.sh.tmpl
@@ -1,12 +1,16 @@
 {{- if (eq .chezmoi.os "darwin") -}}
 #!/bin/bash
 
+# Close App Store apps in case this script updates them
+killall Amphetamine iMovie OneDrive "The Unarchiver" Xcode XMind
+
 brew bundle --no-lock --file=/dev/stdin <<EOF
 # Sources
 tap "fairwindsops/tap"
 tap "fluxcd/tap"
 tap "hashicorp/tap"
 tap "heroku/brew"
+tap "homebrew/autoupdate"
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/cask-drivers"
@@ -24,15 +28,17 @@ tap "tilt-dev/tap"
 #brew "act"
 #brew "autoconf"
 #brew "automake"
-#brew "awscli"
+brew "awscli"
 #brew "bazel"
 brew "bat"
 #brew "buildifier"
 brew "checkov"
 brew "chezmoi"
 #brew "cmake"
+brew "coreutils"
 brew "cosign"
 brew "direnv"
+brew "exa"
 #brew "ext4fuse"
 brew "gh"
 brew "git"
@@ -40,12 +46,14 @@ brew "git-delta"
 brew "gnu-sed"
 brew "gnupg"
 brew "go"
-#brew "openjdk"
+brew "gopass"
+brew "gopass-jsonapi"
 brew "graphviz"
 brew "helm"
 #brew "hey"
 #brew "hugo"
 #brew "imagemagick"
+#brew "istioctl"
 brew "jq"
 brew "k3d"
 #brew "kind"
@@ -62,6 +70,7 @@ brew "mas"
 brew "nmap"
 #brew "nvm"
 #brew "octant"
+#brew "openjdk"
 brew "pinentry-mac"
 #brew "postgresql"
 brew "pre-commit"
@@ -83,6 +92,7 @@ brew "volta"
 brew "watch"
 brew "wget"
 brew "yarn"
+brew "ykman"
 brew "yq"
 brew "fairwindsops/tap/polaris"
 brew "heroku/brew/heroku"
@@ -96,23 +106,31 @@ brew "tilt-dev/tap/tilt"
 #cask "adoptopenjdk8"
 cask "alfred"
 cask "android-studio"
+cask "browserosaurus"
 cask "calibre"
 cask "cheatsheet"
-cask "choosy"
+#cask "choosy"
 cask "cryptomator"
 cask "dbeaver-community"
+cask "darktable"
 cask "docker"
 cask "ferdi"
+cask "finicky"
 cask "firefox-developer-edition"
+cask "gimp"
 cask "gitify"
+cask "inkscape"
 #cask "java"
+cask "jitsi-meet"
 #cask "keybase"
+cask "krita"
 cask "ledger-live"
 cask "lens"
 cask "logitech-options"
 #cask "macdown"
 cask "macfuse"
-cask "moom"
+cask "moom" # OSS alternative: "rectangle"
+cask "onlyoffice"
 cask "postman"
 cask "qbittorrent"
 cask "qlcolorcode"
@@ -127,8 +145,8 @@ cask "spotify"
 cask "suspicious-package"
 cask "timemachineeditor"
 cask "tor-browser"
-cask "visual-studio-code"
 cask "vlc"
+cask "vscodium"
 cask "zoom"
 
 # Fonts
@@ -141,12 +159,44 @@ cask "font-menlo-for-powerline"
 # App Store apps
 mas "Amphetamine", id: 937984704
 mas "iMovie", id: 408981434
-mas "Microsoft Excel", id: 462058435
-mas "Microsoft Word", id: 462054704
 mas "OneDrive", id: 823766827
 mas "The Unarchiver", id: 425424353
 mas "Xcode", id: 497799835
 mas "XMind", id: 1327661892
 EOF
+
+# VSCodium/VSCode extensions
+codium --install-extension aaron-bond.better-comments
+codium --install-extension aprilandjan.ascii-tree-generator
+codium --install-extension BazelBuild.vscode-bazel
+codium --install-extension bungcip.better-toml
+codium --install-extension christian-kohler.path-intellisense
+codium --install-extension DavidAnson.vscode-markdownlint
+codium --install-extension debens.sort-js-object
+codium --install-extension ecmel.vscode-html-css
+codium --install-extension EditorConfig.EditorConfig
+codium --install-extension firefox-devtools.vscode-firefox-debug
+codium --install-extension golang.go
+codium --install-extension GraphQL.vscode-graphql
+codium --install-extension hashicorp.terraform
+codium --install-extension hilleer.yaml-plus-json
+codium --install-extension miclo.sort-typescript-imports
+codium --install-extension mrmlnc.vscode-attrs-sorter
+codium --install-extension ms-azuretools.vscode-docker
+codium --install-extension ms-kubernetes-tools.vscode-kubernetes-tools
+codium --install-extension nrwl.angular-console
+codium --install-extension PascalReitermann93.vscode-yaml-sort
+codium --install-extension redhat.vscode-commons
+codium --install-extension redhat.vscode-yaml
+codium --install-extension richie5um2.vscode-sort-json
+codium --install-extension robertoachar.vscode-essentials-snippets
+codium --install-extension SimonSiefke.svg-preview
+codium --install-extension streetsidesoftware.code-spell-checker
+codium --install-extension Tchoupinax.tilt
+codium --install-extension timonwong.shellcheck
+codium --install-extension Tyriar.sort-lines
+codium --install-extension vincaslt.highlight-matching-tag
+codium --install-extension vscode-icons-team.vscode-icons
+codium --install-extension wix.vscode-import-cost
 
 {{ end -}}
