--- a/run_once_before_2-build-apps-darwin.sh.tmpl
+++ b/run_once_before_2-build-apps-darwin.sh.tmpl
@@ -2,6 +2,12 @@
 
 #!/bin/bash
 
+{{ if eq .chezmoi.arch "arm64" }}
+  eval "$(/opt/homebrew/bin/brew shellenv)"
+{{ else }}
+  eval "$(/usr/local/bin/brew shellenv)"
+{{ end }}
+
 cd $(mktemp -d)
 
 # PG Modeler
