--- a/run_once_before_3-install-packages-darwin.sh.tmpl
+++ b/run_once_before_3-install-packages-darwin.sh.tmpl
@@ -114,6 +114,7 @@ cask "cryptomator"
 cask "dbeaver-community"
 cask "darktable"
 cask "docker"
+cask "dteoh-devdocs"
 cask "ferdi"
 cask "finicky"
 cask "firefox"
