Add gawk and Flux

--- a/run_once_before_3-install-packages-darwin.sh.tmpl
+++ b/run_once_before_3-install-packages-darwin.sh.tmpl
@@ -40,6 +40,8 @@ brew "cosign"
 brew "direnv"
 brew "exa"
 #brew "ext4fuse"
+brew "fluxcd/tap/flux"
+brew "gawk"
 brew "gh"
 brew "git"
 brew "git-delta"
