Ease homebrew packages maintenance through a bundle file

--- a/run_once_before_3-install-packages-darwin.sh.tmpl
+++ b/run_once_before_3-install-packages-darwin.sh.tmpl
@@ -4,169 +4,6 @@
 # Close App Store apps in case this script updates them
 killall Amphetamine iMovie OneDrive "The Unarchiver" Xcode XMind
 
-brew bundle --no-lock --file=/dev/stdin <<EOF
-# Sources
-tap "fairwindsops/tap"
-tap "fluxcd/tap"
-tap "hashicorp/tap"
-tap "heroku/brew"
-tap "homebrew/autoupdate"
-tap "homebrew/bundle"
-tap "homebrew/cask"
-tap "homebrew/cask-drivers"
-tap "homebrew/cask-fonts"
-tap "homebrew/cask-versions"
-tap "homebrew/core"
-tap "instrumenta/instrumenta"
-tap "kube-score/tap"
-#tap "nektos/tap"
-tap "superfly/tap"
-tap "tilt-dev/tap"
-#tap "vmware-tanzu/buildkit-cli-for-kubectl", "https://github.com/vmware-tanzu/buildkit-cli-for-kubectl"
-
-# CLI Apps
-#brew "act"
-#brew "autoconf"
-#brew "automake"
-brew "awscli"
-#brew "bazel"
-brew "bat"
-#brew "buildifier"
-brew "checkov"
-brew "chezmoi"
-#brew "cmake"
-brew "coreutils"
-brew "cosign"
-brew "direnv"
-brew "exa"
-#brew "ext4fuse"
-brew "fluxcd/tap/flux"
-brew "gawk"
-brew "gh"
-brew "git"
-brew "git-delta"
-brew "gnu-sed"
-brew "gnupg"
-brew "go"
-brew "graphviz"
-brew "helm"
-#brew "hey"
-#brew "hugo"
-#brew "imagemagick"
-#brew "istioctl"
-brew "jq"
-brew "k3d"
-#brew "kind"
-brew "kube-score"
-brew "kubeaudit"
-brew "kubeval"
-brew "kubernetes-cli"
-brew "kustomize"
-brew "libpq"
-#brew "libsodium"
-#brew "linkerd"
-brew "mas"
-#brew "mitmproxy"
-brew "nativefier"
-brew "nmap"
-#brew "nvm"
-#brew "octant"
-#brew "openjdk"
-brew "php"
-brew "pinentry-mac"
-#brew "postgresql"
-brew "pre-commit"
-brew "pv"
-brew "python@3.8"
-brew "qt@5"
-#brew "redis"
-brew "s3cmd"
-brew "shellcheck"
-brew "sops"
-brew "starship"
-brew "terraform"
-brew "terraform-docs"
-brew "tflint"
-brew "tfsec"
-brew "tree"
-brew "thefuck"
-brew "volta"
-brew "watch"
-brew "wget"
-brew "yarn"
-brew "ykman"
-brew "yq"
-brew "fairwindsops/tap/polaris"
-brew "heroku/brew/heroku"
-brew "superfly/tap/flyctl"
-#brew "tilt-dev/tap/ctlptl"
-brew "tilt-dev/tap/tilt"
-#brew "vmware-tanzu/buildkit-cli-for-kubectl/kubectl-buildkit"
-
-# GUI Apps
-#cask "adoptopenjdk"
-#cask "adoptopenjdk8"
-cask "alfred"
-cask "android-studio"
-cask "browserosaurus"
-cask "calibre"
-cask "cheatsheet"
-#cask "choosy"
-cask "cryptomator"
-cask "dbeaver-community"
-cask "darktable"
-cask "docker"
-cask "dteoh-devdocs"
-cask "ferdi"
-cask "finicky"
-cask "firefox"
-cask "firefox-developer-edition"
-cask "gimp"
-cask "gitify"
-cask "inkscape"
-#cask "java"
-cask "jitsi-meet"
-#cask "keybase"
-cask "krita"
-cask "ledger-live"
-cask "lens"
-cask "logitech-options"
-#cask "macdown"
-cask "macfuse"
-cask "moom" # OSS alternative: "rectangle"
-cask "onlyoffice"
-cask "postman"
-cask "qbittorrent"
-cask "qlcolorcode"
-cask "qlimagesize"
-cask "qlmarkdown"
-cask "qlstephen"
-cask "qlvideo"
-cask "quicklook-json"
-cask "quicklookase"
-cask "skype"
-cask "spotify"
-cask "suspicious-package"
-cask "timemachineeditor"
-cask "tor-browser"
-cask "vlc"
-cask "vscodium"
-cask "zoom"
-
-# Fonts
-cask "font-meslo-lg"
-cask "font-meslo-lg-nerd-font"
-cask "font-recursive"
-cask "font-recursive-code"
-cask "font-menlo-for-powerline"
-
-# App Store apps
-mas "Amphetamine", id: 937984704
-mas "iMovie", id: 408981434
-mas "OneDrive", id: 823766827
-mas "The Unarchiver", id: 425424353
-#mas "Xcode", id: 497799835
-mas "XMind", id: 1327661892
-EOF
+brew bundle
 
 {{ end -}}
