--- a/run_once_before_2-configure-system-darwin.sh.tmpl
+++ b/run_once_before_2-configure-system-darwin.sh.tmpl
@@ -43,7 +43,7 @@ defaults write com.apple.dock orientation -string "left"
 # Set the icon size of Dock items in pixels
 defaults write com.apple.dock "tilesize" -int 43
 # Minimize windows into their application’s icon
-defaults write com.apple.dock minimize-to-application -bool true
+defaults write com.apple.dock minimize-to-application -bool false
 # Enable launch animation
 defaults write com.apple.dock launchanim -bool true
 # Show indicator lights for open applications in the Dock
