Dock on the right
Signed-off-by: Romain Barissat <romain-noreply@barissat.com>

--- a/run_once_before_2-configure-system-darwin.sh.tmpl
+++ b/run_once_before_2-configure-system-darwin.sh.tmpl
@@ -39,7 +39,7 @@ sudo spctl --master-disable
 # Dock settings
 # ---------------------------------------------------------------------------------------------------------------------
 # Set dock position
-defaults write com.apple.dock orientation -string "left"
+defaults write com.apple.dock orientation -string "right"
 # Set the icon size of Dock items in pixels
 defaults write com.apple.dock "tilesize" -int 43
 # Minimize windows into their application’s icon
