Use VSCode instead of VSCodium

--- a/private_Library/private_Application Support/private_VSCode/User/settings.json.tmpl
+++ b/private_Library/private_Application Support/private_VSCode/User/settings.json.tmpl
@@ -210,5 +210,6 @@
   "shellcheck.customArgs": ["-x"],
   "editor.accessibilitySupport": "off",
   "go.toolsManagement.autoUpdate": true,
-  "workbench.startupEditor": "none"
+  "workbench.startupEditor": "none",
+  "workbench.colorCustomizations": {}
 }
