Add global gitignore file
Signed-off-by: Romain Barissat <romain-noreply@barissat.com>

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -5,8 +5,9 @@
     gpgsign = true
 
 [core]
-	hooksPath = ~/.config/git/hooks
 	pager = delta
+	hooksPath = ~/.config/git/hooks
+	excludesfile = ~/.config/git/.gitignore_global
 
 [credential]
     helper = osxkeychain
