Remove global git hooks in favor of local hooks

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -6,8 +6,8 @@
 
 [core]
 	pager = delta
-	hooksPath = ~/.config/git/hooks
 	excludesfile = ~/.config/git/.gitignore_global
+	# hooksPath = ~/.config/git/hooks
 
 [credential]
     helper = osxkeychain
