Update latest settings

--- a/private_Library/private_Application Support/private_Code/User/settings.json.tmpl
+++ b/private_Library/private_Application Support/private_Code/User/settings.json.tmpl
@@ -92,23 +92,24 @@
   /* Spell-checker */
   /*****************/
   "cSpell.userWords": [
+    "astack",
+    "automerge",
+    "bara",
     "Barissat",
+    "builtins",
     "Copybara",
+    "finalizer",
     "Finalizers",
+    "iife",
+    "kanban",
     "Keybase",
     "Kubernetes",
     "Octokit",
     "Oliv'r",
-    "Polystartup",
-    "Romain",
-    "astack",
-    "bara",
-    "builtins",
-    "finalizer",
-    "iife",
-    "kanban",
     "olivr",
+    "Polystartup",
     "repos",
+    "Romain",
     "symlink"
   ],
   "cSpell.ignorePaths": [
@@ -186,7 +187,8 @@
     ".env": "shellscript",
     "*.yaml.tpl": "helm",
     "*.yml.tpl": "helm",
-    "*.hcl": "terraform"
+    "*.hcl": "terraform",
+    ".yamllint": "yaml"
   },
   "redhat.telemetry.enabled": false,
   "[jsonc]": {
@@ -211,5 +213,12 @@
   "editor.accessibilitySupport": "off",
   "go.toolsManagement.autoUpdate": true,
   "workbench.startupEditor": "none",
-  "workbench.colorCustomizations": {}
+  "workbench.colorCustomizations": {},
+  "editor.inlineSuggest.enabled": true,
+  "github.copilot.enable": {
+    "*": true,
+    "yaml": true,
+    "plaintext": false,
+    "markdown": false
+  }
 }
