Update SSH key to use GPG authentication subkey

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -7,3 +7,4 @@ encryption = "gpg"
     fullname = "Romain Barissat"
     gpgkey = "3FA802F22315C0940E44A51F4690C65094D92796"
     gitemail = "romain-noreply@barissat.com"
+    gpg_ssh_keygrip= "493FA604BA371DE0498D931EDDE187BCBABA7ED5"
